--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,5 +17,21 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gotham", Arial, Helvetica, sans-serif;
+}
+
+/* Add these styles */
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  color: white;
+  font-size: 24px;
+}
+
+.thumbs-swiper .swiper-slide {
+  opacity: 0.5;
+  transition: opacity 0.3s;
+}
+
+.thumbs-swiper .swiper-slide-thumb-active {
+  opacity: 1;
 }
